tests/sealed_tvars/sealed_tvars.exp
Error -------------------------------------------------------------------------------------------- error_examples.js:4:7

Internal error: unconstrained tvar during tvar resolution

   4| class C { }
            ^


Error ------------------------------------------------------------------------------------------ regression_tests.js:3:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

      v-------------------------------------------
   3| function no_missing_env_entry_for_delete() {
   4|   declare var foo: {bar: string | void};
   5|   delete foo.bar; // ok
   6|   (foo.bar: void); // ok
   7| }
      ^



Found 2 errors
